Migrate sysboot to Mill YAML build